# The-Curator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  feed.xml  pyproject.toml  zensical.toml
.github/workflows/: deploy.yml  docs.yml
docs/: CNAME  index.md
docs/api/: main.md  podcast_generation.md
docs/api/auth/: provider.md
docs/api/utils/: vertex_client.md
docs/configuration/: index.md
docs/contributing/: development.md  index.md
docs/getting-started/: index.md  installation.md  mcp-clients.md
docs/infrastructure/: docker.md  index.md  terraform.md
docs/overview/: architecture.md  index.md
src/the_curator/: __init__.py  main.py  podcast_generation.py
src/the_curator/auth/: provider.py
src/the_curator/utils/: rss.py  vertex_client.py
terraform/: main.tf  terraform.tf
tests/: conftest.py  test_health.py  test_main.py  test_podcast_generation.py
tests/auth/: test_provider.py
tests/utils/: test_rss.py  test_vertex_client.py
