[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "the-curator"
version = "0.1.0"
description = "Cloud Run serverless API for The Curator"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "The Curator Team" }]
dependencies = [
  "gunicorn>=23.0,<24.0",
  "uvicorn[standard]>=0.35,<1.0",
  "anthropic[vertex]>=0.49.0",
  "google-genai>=2.3.0",
  "mcp>=1.27.1",
  "google-cloud-aiplatform>=1.153.1",
  "google-cloud-storage>=3.10.1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.16,<2.0",
  "pytest>=8.4,<9.0",
  "httpx>=0.28,<1.0",
  "ruff>=0.11,<1.0",
]

[tool.hatch.envs.default]
python = "3.12"
features = ["dev"]

[tool.hatch.envs.default.scripts]
start = "uvicorn the_curator.main:app --host 0.0.0.0 --port {env:PORT:8000} --reload"
test = "pytest"
lint = "ruff check ."
fmt = "ruff format ."
typecheck = "mypy src"
check = ["lint", "typecheck", "test"]

[tool.hatch.build.targets.wheel]
packages = ["src/the_curator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
pretty = true
show_error_codes = true
mypy_path = ["src"]
